# raylib-game-template

./: .gitignore  CMakeLists.txt  CONVENTIONS.md  LICENSE  README.md  build.zig
.github/workflows/: linux.yml  macos.yml  merge.yml  pr-wasm.yml  release-wasm.yml  webassembly.yml  windows.yml
github-scripts/: compile-raylib-game-template.sh  compile-raylib.sh  setup-emsdk.sh
include/: pong.h
projects/VS2022/: raylib-game-template.sln  raylib_game_template.sln
projects/VS2022/raylib_game/: raylib_game.vcxproj  raylib_game.vcxproj.filters
src/: CMakeLists.txt  Info.plist  Makefile  Makefile.Android  ball.c  buddy_alloc.h  collision.c  driver.c  driver.h  enemy.c  game.c  main.c  minshell.html  player.c  pong.c  raylib_game.aps  raylib_game.c  raylib_game.rc  score.c  screen_ending.c  screen_gameplay.c  screen_logo.c  screen_options.c  screen_title.c  screens.h
src/headers/: screens.h  serializer.h  sprite.h  sprite_rect.h
src/intro_screen/: CMakeLists.txt  intro_screen.c  intro_screen.h
src/play_screen/: CMakeLists.txt  ball.c  enemy.c  game.c  play_screen.c  play_screen.h  player.c  score.c
